<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="product"
            type="com.example.amazonn.Product" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/productImage"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/product_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/btn_star_big_on" />

        <TextView
            android:id="@+id/productName"
            style="@style/productName"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/product_name"
            app:layout_constraintStart_toEndOf="@+id/productImage"
            app:layout_constraintTop_toTopOf="@+id/productImage" />

        <TextView
            android:id="@+id/productPrice"
            style="@style/productName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/price"
            app:layout_constraintStart_toEndOf="@+id/productImage"
            app:layout_constraintTop_toBottomOf="@+id/productName" />

        <Button
            android:id="@+id/removeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/remove_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/productName" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>